--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 	<scope>runtime</scope>
 </dependency>
 		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
@@ -61,7 +66,16 @@
 			<artifactId>spring-boot-starter-socketio</artifactId>
 			<version>1.0.1.RELEASE</version>
 		</dependency>
-	</dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.7.8</version>
+		</dependency>
+
+
+
+    </dependencies>
 
 	<build>
 		<plugins>
