--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg 
 
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.main.allow-circular-references=true
+spring.jpa.show-sql=true
