--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/database
 spring.datasource.username= postgres
-spring.datasource.password= root
+spring.datasource.password= postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 server.port=9998
 
-server.servlet.context-path=/Backend
+server.servlet.context-path=/BackendCRM
 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg %n
