--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.main.allow-circular-references=true
 spring.jpa.show-sql=true
+logging.level.tomcat=TRACE
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.level.net.guides=DEBUG
+
+logging.file.name=myapp.log
