--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,15 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.main.allow-circular-references=true
 #spring.jpa.show-sql=true
 logging.level.tomcat=TRACE
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web=INFO  
 logging.level.org.hibernate=ERROR
 logging.level.net.guides=DEBUG
 
 logging.file.name=myapp.log
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=miled.chedi@esprit.tn
+spring.mail.password=cpfsyytmakqsttjr
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
