--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<dependency>
 	<groupId>org.postgresql</groupId>
 	<artifactId>postgresql</artifactId>
 	<scope>runtime</scope>
