--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ server.servlet.context-path=/BackendCRM
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg %n
 
-
+spring.mail.username=miled.chedi@esprit.tn
+spring.mail.password=cpfsyytmakqsttjr  s
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.main.allow-circular-references=true
 #spring.jpa.show-sql=true
